# python-project-52

./: .gitignore  Makefile  Procfile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: CI.yml
labels/: admin.py  apps.py  tests.py  urls.py  views.py
labels/templates/labels/: labels.html
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: statuses.html
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  tests.py  views.py
task_manager/task_manager/: settings.py
task_manager/tasks/: admin.py  apps.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  confirm_delete.html  create.html  index.html  login.html  update.html
task_manager/templates/tasks/: show_task.html
task_manager/templates/users/: register.html  test.html
task_manager/users/: admin.py  apps.py  tests.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+3 more)
tasks/: apps.py  filter.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_executor.py  0003_alter_tasks_options_remove_tasks_labels_and_more.py
users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0002_alter_users_managers_users_email_users_groups_and_more.py  0004_alter_users_first_name.py
(+4 files in other folders)
